<resources>
    <string name="app_name">F3TM TEST</string>
    <string name="connected">已连接</string>
    <string name="connect">建立连接</string>
    <string name="disconnect">断开连接</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="base">基本命令</string>
    <string name="mag">磁卡</string>
    <string name="cpu">CPU 卡</string>
    <string name="test">性能测试</string>
    <string name="reset_noaction">复位，不移动卡</string>
    <string name="reset_eject">复位，弹卡</string>
    <string name="reset_retain">复位，回收卡</string>
    <string name="reset_hold">复位，夹卡</string>
    <string name="card_pos">卡机状态</string>
    <string name="permit_insertion">允许前端进卡</string>
    <string name="permit_insertionmag">回收卡</string>
    <string name="denie_insertion">禁止前端进卡</string>
    <string name="move_toreadpos">移动卡到出卡口</string>
    <string name="move_toiccpos">移动卡到机内</string>
    <string name="move_tofrontend">移动卡到前端持卡位</string>
    <string name="move_torearend">移动卡到后端持卡位</string>
    <string name="move_torereadpos">回收卡</string>
    <string name="move_togatepos">移动卡到RF位置</string>
    <string name="move_toretainbin">移动卡到MM</string>
    <string name="openkey">开启国密</string>
    <string name="closekey">关闭国密</string>
    <string name="dispense">发卡</string>
    <string name="sensor">前端传感器状态</string>
    <string name="read">读卡</string>
    <string name="reread">写卡</string>
    <string name="power_on">激活</string>
    <string name="power_off">释放</string>
    <string name="transmit">执行</string>
    <string name="start_test">开始</string>
    <string name="stop_test">停止</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_devices">可用设备</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
</resources>
